styles.css
body {
    font-family: Inter;
    color: #FFFFFF;
    margin: 0px !important;
    padding-bottom: 64px;
    color-scheme: only light;
    overflow-x: hidden;
}

html {
    scroll-behavior: smooth;
    color-scheme: dark;
    background-color: #0B1816;
    scrollbar-color: #395049 #152523;
    -webkit-tap-highlight-color: transparent;
    transition: scrollbar-color 0.5s;
}

body.gscrollbar.glightbox-open {
    margin: 0px !important;
}

.glightbox-open {
    overflow: initial !important;
    scrollbar-color: #040606 #020303;
}

.glightbox-open:has(.gfadeOut) {
    overflow: initial !important;
    scrollbar-color: #395049 #152523;
}

img {
    -webkit-user-drag: none;
}

font:not(font font) {
    display: block;
}

hr {
    border-top: 0.1px solid #1d2423;
    border-bottom: none;
    border-left: none;
    border-right: none;
    margin-top: 24px;
    margin-bottom: 24px;
}

::selection {
    background-color: #0e2e2895;
}

:not(.btn-titlebar):focus-visible {
    outline: 2px solid #a1e0d4;
    outline-offset: 3px;
}
 
.btn-titlebar:focus-visible {
    outline: none;
}

.btn-titlebar:focus-visible .iconify.btn {
    color: #6e9e95;
    background: linear-gradient(to right, #a1e0d4 50%, #a1e0d4 50%);
    background-size: 100% 1px;
    background-position: bottom;
    background-repeat: no-repeat;
    animation: navigation-btn-animation 0.3s forwards;
}

.titlebar {
    display: flex;
    color: #c1cac9;
    font-size: 24px;
    font-weight: 600;
    margin: 0px;
    background: linear-gradient(to right, #1d2726 50%, #1d2726 50%);
    background-size: 200% 1px;
    background-position: bottom;
    background-repeat: no-repeat;
    background-color: #091311;
    position: sticky;
    top: 0;
    z-index: 1;
}

.content {
    margin: 32px;
    transform-origin: bottom;
}

.content2 {
    padding: 32px;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
}

.bg-404 {
    object-position: bottom;
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: absolute;
    user-select: none;
}

.content-404 {
    width: 100%;
    height: 100%;
    position: absolute;
    align-content: center;
}

.content-project {
    padding: 32px;
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
}

.heading {
    color: #9bd6c2;
    font-size: 50px;
    font-weight: 700;
}

.heading2 {
    color: #9bd6c2;
    font-size: 30px;
    font-weight: 600;
}

.paragraph {
    color: #c1cac9;
    font-size: 20px;
    font-weight: 500;
    margin-top: 8px;
}

.paragraph2 {
    color: #c1cac9;
    font-size: 17px;
    font-weight: 500;
    margin-top: 8px;
}

.paragraph-stuff {
    color: #c1cac9;
    font-size: 17px;
    font-weight: 500;
    margin-top: 16px;
    line-height: 2;
}

.me {
    margin-bottom: 32px;
    border-radius: 100px;
    border: 0.1px solid #1d2423;
}

.titlebar-title {
    margin-right: auto;
    padding: 16px;
    padding-left: 16px;
}

a.btn-titlebar {
    margin-right: 16px;
    min-width: 33px;
}

.project-title {
    color: #c1cac9;
    font-size: 27px;
    font-weight: 600;
    display: -webkit-box;
    line-clamp: 1;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    transition: all 0.3s;
}

.project-summary {
    color: #9da8a7;
    font-size: 17px;
    font-weight: 500;
    margin-top: 8px;
    display: -webkit-box;
    line-clamp: 3;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    transition: all 0.3s;
}

@property --titlebar-button-color {
    syntax: "<color>";
    inherits: false;
    initial-value: #c1cac9;
}

@keyframes titlebar-btn-animation {
    from { background-size: 0 1px; }
    to { background-size: 100px 1px; }
}

@keyframes titlebar-btn-animation-color {
    from { color: #506e65; }
    to { color: #4fb493; }
}

@keyframes titlebar-btn-animation-wiggle {
    0% { transform: translateY(0px); }
    40% { transform: translateY(-5px); }
    70% { transform: translateY(3px); }
    100% { transform: translateY(0px); }
}

a:has(.iconify.btn.selected:not(.iconify.btn.selected.noanimate)) {
    background: linear-gradient(to right, #4fb493 50%, #4fb493 50%);
    background-position: bottom left;
    background-repeat: no-repeat;
    background-size: 0 1px;
    animation: titlebar-btn-animation 0.7s forwards 0.3s;
}

.iconify.btn.selected:not(.iconify.btn.selected.noanimate) {
    color: #4fb493;
    animation: titlebar-btn-animation-wiggle 0.7s forwards, titlebar-btn-animation-color 0.5s;
}

.iconify.btn.selected.noanimate {
    color: #4fb493;
    background: linear-gradient(to right, #4fb493 50%, #4fb493 50%);
    background-size: 100% 1px;
    background-position: bottom;
    background-repeat: no-repeat;
}

.iconify.btn {
    color: #c1cac9;
    height: 100%;
    background: linear-gradient(to right, var(--titlebar-button-color) 50%, var(--titlebar-button-color) 50%);
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: 0 1px;
    transition: --titlebar-button-color 0.5s, color 0.3s, background-size 0.17s linear !important;
}

@media ((hover: hover) and (pointer: fine)) {
    .iconify.btn:not(.iconify.btn.selected):hover {
        --titlebar-button-color: #738c84;
        color: #738c84;
        background: linear-gradient(to right, var(--titlebar-button-color) 50%, var(--titlebar-button-color) 50%);
        background-position: bottom;
        background-repeat: no-repeat;
        background-size: 100% 1px;
        transition: background-size 0.17s linear;
    }

    .iconify.btn:not(.iconify.btn.selected):active {
        --titlebar-button-color: #506e65;
        color: #506e65;
        background: linear-gradient(to right, var(--titlebar-button-color) 50%, var(--titlebar-button-color) 50%);
        background-size: 100% 1px;
        background-position: bottom;
        background-repeat: no-repeat;
    }
}
/* ... */

